pulkitchhabra-salesforce/objects/Timecard__c.object
<CustomObject>
    <description>Records the total no. of productive hours of a user.</description>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Date of delivery of task.</description>
        <label>Date Delivered</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Logged__c</fullName>
        <description>No. of hours worked on the described activities.</description>
        <label>Hours Logged</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <description>The name of task related to the project being worked on.</description>
        <inlineHelpText>Enter the name of task related to the project you are working on or have worked on.</inlineHelpText>
        <label>Project Task</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timecard_Status__c</fullName>
        <label>Timecard Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Services__c</fullName>
        <label>Type of Services</label>
        <picklist>
            <picklistValues>
                <fullName>Apex / Visualforce Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom App Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics (Reports &amp; Dashboards)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings / Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Timecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entered_By__c</columns>
        <columns>Hours_Logged__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Timecard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>